# hass-komfovent

./: .devcontainer.json  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  FIRMWARE_UPDATE_PLAN.md  FIRMWARE_URL_TEST_RESULTS.md  LICENSE  README.md  README_FIRMWARE_UPDATE.md  RULES.md  SCRIPTS_USAGE.md  download_firmware.py  hacs.json  mock_c6_server.py  modbus_dump.py  modbus_server.py  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  test_firmware_check.py  validate_firmware_update.py  validate_version_check.py
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: checks.yml  lint.yml  validate.yml
config/: configuration.yaml
custom_components/komfovent/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  dashboard.py  data.py  datetime.py  diagnostics.py  helpers.py  icons.json  manifest.json  modbus.py  number.py  registers.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  update.py
custom_components/komfovent/core/: __init__.py  ema.py
custom_components/komfovent/firmware/: __init__.py  checker.py  store.py  uploader.py
custom_components/komfovent/tests/: test_integration.py
custom_components/komfovent/translations/: en.json
docs/: ARCHITECTURE.md  C6-firmware-g1-authorized.html  C6-firmware-g1-login.html  C6-firmware-review.md  C6-firmware-upload.md  MODBUS_C6.md  SETTINGS.md  TODO.md
documentation/: C6-firmware-upload.md  C6M_holding_registers.json  C6_MODBUS_EN.md  C6_holding_registers.json  C6_holding_registers_4EMQGE.json  C6_holding_registers_8BXC01.json  EMA.md  MODBUS_C6.md  MODBUS_C8.md  SETTINGS.md  TODO.md
scripts/: __init__.py  develop  download_firmware.py  mock_c6_server.py  modbus_server.py  setup  validate_firmware_update.py
tests/: conftest.py  requirements.txt  test_binary_sensor.py  test_button.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_datetime.py  test_diagnostics.py  test_ema.py  test_helpers.py  test_integration.py  test_komfovent_sensor.py  test_live_modbus.py  test_modbus.py  test_number.py  test_platform_setup.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
tests/fixtures/: C6M_registers_0.json  C6M_registers_4EMQGE.json  C6M_registers_NFR61N.json  C6M_registers_ZBP1CD.json  C6M_registers_issue161.json  C6M_registers_issue189.json  C6_registers_0.json  C6_registers_01KQJJMJHQ0B3TZMR5140RQ8QM.json  C6_registers_03VSFK.json  C6_registers_1.3.17.20.json  C6_registers_4EMQGE.json  C6_registers_8BXC01.json  C6_registers_ACFS5N.json  C6_registers_Y8817D.json  C6_registers_ZBP1CD.json  C8_registers_0K01AJ.json
