[project]
name = "hass-komfovent"
version = "0.7.3"
description = "A Home Assistant integration for Komfovent C6, C6M and C8 ventilation units through Modbus TCP"
readme = "README.md"
requires-python = ">=3.13.2"
authors = [
    { name = "lnagel", email = "lnagel@users.noreply.github.com" }
]
dependencies = [
    "colorlog>=6.10.1",
    "homeassistant>=2025.10.0",
    "pymodbus>=3.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.285",
]
dev = [
    "ruff>=0.14.5",
]

[project.urls]
Documentation = "https://github.com/lnagel/hass-komfovent"
Repository = "https://github.com/lnagel/hass-komfovent"
Issues = "https://github.com/lnagel/hass-komfovent/issues"

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | build
  | dist

)/
'''

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "enable_socket: mark test to run with real socket connections"
]
