[project]
name = "hass-komfovent"
version = "0.7.4"
description = "A Home Assistant integration for Komfovent C6, C6M and C8 ventilation units through Modbus TCP"
readme = "README.md"
requires-python = ">=3.13.2"
authors = [
    { name = "lnagel", email = "lnagel@users.noreply.github.com" }
]
dependencies = [
    "colorlog>=6.10.1",
    "homeassistant>=2025.10.0",
    "pymodbus>=3.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-homeassistant-custom-component>=0.13.285",
]
dev = [
    "bump-my-version>=1.1.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a12",
]

[project.urls]
Documentation = "https://github.com/lnagel/hass-komfovent"
Repository = "https://github.com/lnagel/hass-komfovent"
Issues = "https://github.com/lnagel/hass-komfovent/issues"

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "enable_socket: mark test to run with real socket connections"
]

[tool.coverage.run]
branch = true
source = ["custom_components/komfovent"]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
fail_under = 29
precision = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.bumpversion]
current_version = "0.7.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
tag_name = "v{new_version}"
pre_commit_hooks = ["uv lock && git add uv.lock"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "custom_components/komfovent/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN", # Allow missing type annotations in tests
    "D103", # Allow missing docstrings in tests
    "S101", # Allow assert in tests
    "S106", # Allow hardcoded passwords in tests
    "S311", # Allow pseudo-random generators in tests
    "ARG001", # Allow unused arguments in fixtures
    "PLC0415", # Allow conditional imports in tests
    "PLR2004", # Allow magic values in tests
    "SLF001", # Allow private member access in tests
    "EM101", # Allow string literals in exceptions
    "TRY003", # Allow long exception messages
]

[tool.ty.environment]
python-version = "3.13"
